// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyField renders correctly 1`] = `
Array [
  <h3
    className="copy-field-label"
  />,
  <div
    className="copy-field "
  >
    <div
      className="copy-field-body"
      style={
        Object {
          "textAlign": undefined,
        }
      }
    >
      Test text for copy
    </div>
    <button
      className="copy-button"
      onClick={[Function]}
    >
      <div
        className="__react_component_tooltip place-right type-dark "
        data-id="tooltip"
      >
        Copy All
      </div>
      <img
        className="icon copy"
        data-place="top"
        data-tip="Copy all"
        src="test-file-stub"
      />
    </button>
  </div>,
]
`;

exports[`MnemonicCopyField renders correctly 1`] = `
Array [
  <h3
    className="copy-field-label"
  />,
  <div
    className="copy-field mnemonic"
  >
    <div
      className="copy-field-body"
      style={
        Object {
          "textAlign": undefined,
        }
      }
    >
      mnemonic text for copy
    </div>
    <button
      className="copy-button"
      onClick={[Function]}
    >
      <div
        className="__react_component_tooltip place-right type-dark "
        data-id="tooltip"
      >
        Copy All
      </div>
      <img
        className="icon copy"
        data-place="top"
        data-tip="Copy all"
        src="test-file-stub"
      />
    </button>
  </div>,
]
`;
